# DS_Fundamentals

datascience/: index.ipynb
datascience/python/: index.ipynb
datascience/python/01_mod_intro/: 01_mod_python_syntax.ipynb  02_python_variables_objects.ipynb  03_python_operators.ipynb
datascience/python/02_mod_data/: 02_data_structures.ipynb  02_data_structures_lists.ipynb
datascience/python/03_mod_ctrlflow/: 01_mod_control_flow.ipynb  02_python_statements.ipynb  03_python_functions.ipynb
datascience/python/04_mod_functions_errs/: 01_mod_defining_functions.ipynb  02_mod_errors_and_exceptions.ipynb  03_mod_exercises.ipynb
datascience/python/05_mod_iterators_list/: 01_iterators.ipynb  02_list_comprehension.ipynb  03_generators.ipynb  04_list_exercises.ipynb
datascience/python/06_mod_generators_expressions/: 01_generators.ipynb  02_regex.ipynb  03_str_manipulate.ipynb  04_closures_generators.ipynb
datascience/python/07_mod_oop/: 01_obj_classes.ipynb  02_ex_obj_classes.ipynb
datascience/python/09_mod_numpy/: 01_introduction_NumPy.ipynb  02_basics_NumPy.ipynb  03_NumPy_exercises.ipynb
datascience/python/09_mod_numpy/gary-markdown/: pyproject.toml
datascience/python/09_mod_numpy/gary-markdown/tests/: test_gary_markdown.py
datascience/python/10_mod_pandas/: 01_introduction_to_pandas.ipynb  02_introducing-pandas-objects.ipynb  03_data_manipulation_pandas.ipynb  04_getting_started_pandas.ipynb
datascience/python/11_mod_matplotlib/: 01-Introduction-To-Matplotlib.ipynb
datascience/python/12_mod_scikitlearn/: 01-Introduction-To-Scikit-Learn.ipynb  (+2 more)
(+8 files in other folders)
