[tool.poetry]
name = "gary-markdown"
version = "0.1.0"
description = ""
authors = ["gary.jackson@qlx.com <gary.jackson@qlx.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
